--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@stackblitz/sdk": "^1.11.0",
     "axios": "^1.8.4",
     "file-saver": "^2.0.5",
