--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=http://localhost:3000
+VITE_BACKEND_URL=https://twodoparcialsw1backend.onrender.com
 VITE_GEMINI_API_KEY=AIzaSyDnmHtzdr-R9d9EsuDESC6VlIMYWV67MBM
